--- a/Lab1/Data.tex
+++ b/Lab1/Data.tex
@@ -5,7 +5,7 @@
 \graphicspath{ {./Images} }
 \begin{document}
 
-\title{Lab Write-up 1: Transmission Line Basics Data}
+\title{Lab 1: Transmission Line Basics Data}
 \author{Michael Shen}
 \date{}
 \maketitle
