--- a/Lab2/Data.tex
+++ b/Lab2/Data.tex
@@ -4,7 +4,7 @@
 \usepackage[margin=0.75in]{geometry}
 \begin{document}
 
-\title{Lab Write-up 2: The Smith Chart Data}
+\title{Lab 2: The Smith Chart Data}
 \author{Michael Shen}
 \date{}
 \maketitle
