--- a/Lab5/Writeup.tex
+++ b/Lab5/Writeup.tex
@@ -24,14 +24,14 @@ Distance (cm)& 9cm $\vert\Gamma '_{in}\vert_{\omega=\omega_0}$
 			 & 9cm $\vert S_{21}\vert$ (dB) at $\omega = \omega_0$
 			 & 5cm $\vert\Gamma '_{in}\vert_{\omega=\omega_0}$     
 			 & 5cm $\vert S_{21}\vert$ (dB) at $\omega = \omega_0$ \\ \hline
-2   		 & $0.195\angle-72.83\degree$ & -0.199 & $0.032\angle150.4\degree$  & -1.42   \\ \hline
-4   	 	 & $0.324\angle115.8\degree$  & -0.682 & $0.575\angle109.5\degree$  & -1.847  \\ \hline
-6   	 	 & $0.604\angle114.3\degree$  & -2.52  & $0.847\angle109.0\degree$  & -5.954  \\ \hline
-8		     & $0.755\angle113.4\degree$  & -4.211 & $0.925\angle109.1\degree$  & -10     \\ \hline
-10  		 & $0.843\angle113.2\degree$  & -6.201 & $0.941\angle108.9\degree$  & -12.078 \\ \hline
-12 			 & $0.901\angle112.5\degree$  & -8.832 & $0.954\angle108.8\degree$  & -15.471 \\ \hline
-14 			 & $0.925\angle112.9\degree$  & -10.91 & $0.961\angle108.9\degree$  & -18.42  \\ \hline
-16  		 & $0.938\angle112.2\degree$  & -12.72 & $0.965\angle108.8\degree$  & -20.475 \\ \hline
+2   		 & $0.195$  & -0.199 & $0.032$  & -1.42   \\ \hline
+4   	 	 & $0.324$  & -0.682 & $0.575$  & -1.847  \\ \hline
+6   	 	 & $0.604$  & -2.52  & $0.847$  & -5.954  \\ \hline
+8		     & $0.755$  & -4.211 & $0.925$  & -10     \\ \hline
+10  		 & $0.843$  & -6.201 & $0.941$  & -12.078 \\ \hline
+12 			 & $0.901$  & -8.832 & $0.954$  & -15.471 \\ \hline
+14 			 & $0.925$  & -10.91 & $0.961$  & -18.42  \\ \hline
+16  		 & $0.938$  & -12.72 & $0.965$  & -20.475 \\ \hline
 \end{tabular}
 \end{table}
 
@@ -39,10 +39,10 @@ Distance (cm)& 9cm $\vert\Gamma '_{in}\vert_{\omega=\omega_0}$
 \centering
 \begin{tabular}{|c|c|c|}
 \hline
-Distance (cm)	  & 9cm $\vert\Gamma '_{in}\vert_{\omega=\omega_0}$      
+Distance and Offset	  & 9cm $\vert\Gamma '_{in}\vert_{\omega=\omega_0}$      
 			 	  & 5cm $\vert\Gamma '_{in}\vert_{\omega=\omega_0}$ \\ \hline
-5cm $(30\degree)$ & $0.646\angle115.4\degree$ & $0.802\angle109\degree$   \\ \hline
-5cm $(60\degree)$ & $0.893\angle112.4\degree$ & $0.903\angle109.4\degree$ \\ \hline
+5cm $(30\degree)$ & $0.646$ & $0.802$   \\ \hline
+5cm $(60\degree)$ & $0.893$ & $0.903$ \\ \hline
 \end{tabular}
 \end{table}
 \subsection{Analysis}
