--- a/Lab6/Writeup.tex
+++ b/Lab6/Writeup.tex
@@ -87,7 +87,23 @@ Distance (cm) & Constant Frequency $\vert S_{21}\vert$ (dB)
 \subsection{Analysis}
 
 \begin{enumerate}
-	\item Using (6.33) determine the theoretical power transfer efficiency from 2-16cm
+	\item
+	\begin{table}[h]
+	\centering
+		\begin{tabular}{|c|c|}
+		\hline
+		Distance (cm) & $\eta_{\omega_0}$  \\ \hline
+		2             & 0.4408  \\ \hline
+		4             & 0.5358  \\ \hline
+		6             & 0.7962  \\ \hline
+		8             & 0.9280  \\ \hline
+		10            & 0.9163  \\ \hline
+		12            & 0.7733  \\ \hline
+		14            & 0.6491  \\ \hline
+		16            & 0.5519  \\ \hline
+		\end{tabular}
+	\end{table}
+
 	\item Using (6.39) determine the theoretical power transfer efficiency at the odd mode frequency from 2-16cm
 	\item Using (6.37) and circuit values plot the maximum power transfer efficiency from 2-16cm
 \end{enumerate}
