--- a/Lab6/Writeup.tex
+++ b/Lab6/Writeup.tex
@@ -123,5 +123,6 @@ Distance (cm) & Constant Frequency $\vert S_{21}\vert$ (dB)
 \end{enumerate}
 
 \section{Summary}
+In this lab I learned the importance of frequency tuning, specifically that in strong coupling, odd and even mode frequencies result in less power loss than the resonant frequency. Furthermore, I learned how to design matching networks and rectifiers to allow sufficient power transfer to light up an LED.
 
 \end{document}
